<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/regLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reg_create_account"
        style="@style/BgTextView"
        android:textAlignment="viewStart"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/regEmailEdittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/regEmailEdittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"


        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textColor="#353535"
        app:layout_constraintBottom_toTopOf="@+id/regPasswordEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regLabel"
        tools:text="emailaddress@email.com" />

    <EditText
        android:id="@+id/regPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"

        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textColor="#353535"
        app:layout_constraintBottom_toTopOf="@+id/regConfirmPasswordEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmailEdittext"
        tools:text="emailaddress@email.com" />

    <EditText
        android:id="@+id/regConfirmPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"

        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textColor="#353535"
        app:layout_constraintBottom_toTopOf="@+id/regConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPasswordEdit"
        tools:text="password confirm" />

    <Button
        android:id="@+id/regConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up"
        style="@style/Button"
        app:layout_constraintBottom_toTopOf="@+id/regLinkToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regConfirmPasswordEdit" />

    <TextView
        android:id="@+id/regLinkToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_question"
        style="@style/BgTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regConfirmButton" />

</androidx.constraintlayout.widget.ConstraintLayout>