<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgotLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgotten_password"
        style="@style/BgTextView"
        android:textAlignment="viewStart"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotEmailEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/forgotEmailEdit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"


        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"

        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/forgotConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotLabel"
        tools:text="emailaddress@email.com" />

    <Button
        android:id="@+id/forgotConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotLinkToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotEmailEdit" />

    <TextView
        android:id="@+id/forgotLinkToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_in"
        style="@style/BgTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotEmailInfoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotConfirmButton" />

    <TextView
        android:id="@+id/forgotEmailInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:singleLine="false"
        android:text="@string/chars_newline"
        style="@style/BgTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotLinkToLogin"
        tools:text="Password reset link sent to: \n emailexample@email.com" />

</androidx.constraintlayout.widget.ConstraintLayout>