...
    <string name="notif_message">Message: %1$s</string>


    <string name="forgotten_password">Forgotten password</string>
    <string name="no_account_of_email">This email address does not have an associated account</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_at_least__num_char_error">Passwords are at least 10 characters long</string>
    <string name="password_have_uppercase_error">Passwords must have at least one upper-case letter</string>
    <string name="password_have_lowercase_error">Passwords must have at least one lower-case letter</string>
    <string name="dont_have_an_account_question">Don\'t have an account? </string>
    <string name="email_is_not_verified">Email is not verified</string>
    <string name="email_resent_verification">New verification email sent</string>
    <string name="failed_to_send_verification_email">Failed to send email</string>
...
    <string name="edit_message">Edit message</string>
    <string name="notification_message_explanation">This will show in your notifications when the conditions are met</string>
    <string name="save">Save</string>
    <string name="please_enter_number">Please enter a number</string>
    <string name="inactive">Inactive</string>
    <string name="email_already_exists">This email is already associated with an account</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_too_common">This password is too common, please choose another one</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this device? This action cannot be undone</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_delete_scene">Are you sure you want to delete this scene? This action cannot be undone</string>
...
